# pyFaultSlip

./: .gitignore  LICENSE  MANIFEST.in  MainWindow.ui  MainWindow_2d.py  MainWindow_2d.ui  README.md  TODO.txt  data_model.py  faultslipGUI.py  faultslipMain.py  pyproject.toml  requirements.txt  test.json  test2.json  test_faultslipMain.py
examples/3d-example/: F1.ply  F2.ply  F3.ply  F4.ply  F5.ply  F6.ply  patterson_mesh_work.ipynb  patterson_normal.json  patterson_strikeslip.json
py_fault_slip/: MainWindow_2d.ui  __init__.py  data_model.py  defaults.json  faultslipGUI.py
src/py_fault_slip/: __init__.py  data_model.py  faultslipGUI.py  plot_fsp.py
testdata/: 1000-slice.json  F1.ply  F1.ts  F1_proc_2020_190_093713.ply  F1_proc_2020_190_104849.msh  F1_test.msh  fake_lineaments.dbf  fake_lineaments.sbn  fake_lineaments.sbx  fake_lineaments.shp  fake_lineaments.shx  test.json
